[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui_elements/appearance/color_picker.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_elements/assets/themes/suspect_ui.tres" type="Theme" id=2]
[ext_resource path="res://ui_elements/assets/themes/suspect_ui_small.tres" type="Theme" id=3]
[ext_resource path="res://ui_elements/appearance/colors.gd" type="Script" id=4]

[node name="Colors" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_right = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_left = 40
theme_override_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_left = 40.0
offset_top = 10.0
offset_right = 1880.0
offset_bottom = 1070.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkinLabel" type="Label" parent="MarginContainer/VBoxContainer"]
offset_right = 1840.0
offset_bottom = 42.0
theme = ExtResource( 3 )
text = "Skin Color"

[node name="SkinColor" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 58.0
offset_right = 1840.0
offset_bottom = 342.0
size_flags_vertical = 3

[node name="FHairLabel" type="Label" parent="MarginContainer/VBoxContainer"]
offset_top = 358.0
offset_right = 1840.0
offset_bottom = 400.0
theme = ExtResource( 3 )
text = "Facial Hair Color"

[node name="FHairColor" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 416.0
offset_right = 1840.0
offset_bottom = 701.0
size_flags_vertical = 3
colorMapPath = "res://game/character/assets/colormaps/fhair_color.png"

[node name="HairLabel" type="Label" parent="MarginContainer/VBoxContainer"]
offset_top = 717.0
offset_right = 1840.0
offset_bottom = 759.0
theme = ExtResource( 3 )
text = "Hair Color"

[node name="HairColor" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 775.0
offset_right = 1840.0
offset_bottom = 1060.0
size_flags_vertical = 3
colorMapPath = "res://game/character/assets/colormaps/hair_color.png"

[connection signal="colorOnClick" from="MarginContainer/VBoxContainer/SkinColor" to="." method="_on_SkinColor_colorOnClick"]
[connection signal="colorOnClick" from="MarginContainer/VBoxContainer/FHairColor" to="." method="_on_FHairColor_colorOnClick"]
[connection signal="colorOnClick" from="MarginContainer/VBoxContainer/HairColor" to="." method="_on_HairColor_colorOnClick"]
